<resources>
    <string name="app_name">IP Location</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="ip_info">Ip Info</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geo_position">Geo position</string>
    <string name="ip_information">Ip Information</string>
    <string name="loading">Loading...</string>
    <string name="ip">IP</string>
    <string name="enter_ip">Введите ваш IP</string>
    <string name="enter">Ввод</string>
    <string name="share">Share!</string>
    <string name="developer_name">Разработчик: Скорик Константин, группа РИБО-05-22</string>
</resources>