<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white_custom">

    <ImageView
        android:id="@+id/mireaImg"
        android:src="@drawable/mirea"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_username"
        android:layout_below="@+id/mireaImg"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_build_24"
        android:layout_below="@+id/login" />
    <Button
        android:id="@+id/btnStartActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/developer_name"
        android:gravity="center_horizontal"/>



</RelativeLayout>