<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IpInfoFragment"
    android:layout_marginTop="50dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/ipInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ip"
        android:textSize="32sp"
        android:layout_marginTop="50dp" />
    <LinearLayout
        android:id="@+id/countryLinerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ipInfo"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:singleLine="true"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/counrtyFlag"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/cityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/loading"
        android:paddingTop="10dp"
        android:layout_below="@+id/countryLinerLayout"/>
    <TextView
        android:id="@+id/Coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_below="@id/cityInfo"
        android:paddingTop="10dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/moreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:paddingTop="20dp"
        android:layout_below="@id/Coordinates"/>
    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="50dp"
        android:textSize="20dp"
        android:text="@string/share"
        />



</RelativeLayout>








